--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/dbal": "^4.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "4.2"
     },
     "require-dev": {
@@ -74,6 +75,8 @@
             "php-http/discovery": true
         }
     },
+    
     "minimum-stability": "stable",
     "prefer-stable": true
+
 }
